--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,3 +39,18 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+
+- task: DownloadBuildArtifacts@0
+  inputs:
+    buildType: 'current'
+    downloadType: 'single'
+    artifactName: 'drop'
+    downloadPath: '$(System.ArtifactsDirectory)'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'ARMME'
+    appType: 'webApp'
+    WebAppName: 'testaz400111'
+    packageForLinux: '$(System.ArtifactsDirectory)/drop/*.zip'
